--- a/cookie.conf
+++ b/cookie.conf
@@ -68,7 +68,7 @@ https://ttcj.dashengtec.com/api/v2/sign url script-request-body https://raw.gith
 http://api.zsbrcc.com/api/extra/finishTask url script-request-body https://raw.githubusercontent.com/xl2101200/-/main/zsb.js
 #WGC
 http://stc.enjoyha.com/api/miner/mining url script-request-header https://raw.githubusercontent.com/xl2101200/-/main/wgc.js
-薪时光
+#薪时光
 http://www.hbwsnl.cn/index.php? url script-request-body https://raw.githubusercontent.com/xl2101200/-/main/xsg.js
 
 #炎兔
